--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <title>Notes</title>
+    <title>Advice Health</title>
   </head>
   <body>
     <div id="root"></div>
